syntax = "proto3";

option csharp_namespace = "gRPCserver";

service Student {
	rpc GetStudentById (GetStudentByIdModel) returns (StuentModel)
	rpc GetStudentById (GetAllStudentModel) returns (StuentModel)
}

message GetStudentByIdModel{
	int studentId = 1;
}
message GetAllStudentModel{

}
message StuentModel {
	int Id = 1;
	string Name = 2;
	string Address = 3;
}